@@ -1,7 +1,7 @@
 package io.mosip.kernel.cbeffutil.test;
 
+import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
@@ -10,7 +10,6 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -18,21 +17,7 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
-import io.mosip.kernel.biometrics.commons.CbeffValidator;
-import io.mosip.kernel.biometrics.constant.*;
-import io.mosip.kernel.biometrics.entities.BDBInfo;
-import io.mosip.kernel.biometrics.entities.BIR;
-import io.mosip.kernel.biometrics.entities.BIRInfo;
-import io.mosip.kernel.biometrics.entities.Entry;
-import io.mosip.kernel.biometrics.entities.RegistryIDType;
-import io.mosip.kernel.biometrics.entities.VersionType;
-import io.mosip.kernel.biometrics.spi.CbeffUtil;
-import io.mosip.kernel.cbeffutil.impl.CbeffImpl;
 
 import org.junit.Before;
 import org.junit.Test;
@@ -43,17 +28,25 @@ import org.mockito.Mockito;
 import org.powermock.api.mockito.PowerMockito;
 import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.powermock.modules.junit4.PowerMockRunner;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit4.SpringRunner;
 
+import io.mosip.kernel.biometrics.commons.CbeffValidator;
+import io.mosip.kernel.biometrics.constant.BiometricType;
+import io.mosip.kernel.biometrics.constant.OtherKey;
+import io.mosip.kernel.biometrics.constant.ProcessedLevelType;
+import io.mosip.kernel.biometrics.constant.PurposeType;
+import io.mosip.kernel.biometrics.constant.QualityType;
+import io.mosip.kernel.biometrics.entities.BDBInfo;
+import io.mosip.kernel.biometrics.entities.BIR;
+import io.mosip.kernel.biometrics.entities.BIRInfo;
+import io.mosip.kernel.biometrics.entities.Entry;
+import io.mosip.kernel.biometrics.entities.RegistryIDType;
+import io.mosip.kernel.biometrics.entities.VersionType;
+import io.mosip.kernel.biometrics.spi.CbeffUtil;
+import io.mosip.kernel.cbeffutil.impl.CbeffImpl;
 import io.mosip.kernel.core.cbeffutil.common.CbeffISOReader;
-import io.mosip.kernel.core.cbeffutil.entity.BIRVersion;
-
 
 @RunWith(PowerMockRunner.class)
-@PrepareForTest({URL.class, CbeffValidator.class})
+@PrepareForTest({ URL.class, CbeffValidator.class })
 public class CbeffImplTest {
 
 	@InjectMocks
@@ -70,11 +63,11 @@ public class CbeffImplTest {
 	private List<BIR> exceptionList;
 	private static final String localpath = "./src/main/resources";
 
+	@SuppressWarnings("unused")
 	@Before
 	public void setUp() throws Exception {
 		PowerMockito.whenNew(URL.class).withArguments(Mockito.anyString()).thenReturn(mockURL);
 		when(mockURL.openStream()).thenReturn(inputStream);
-
 
 		byte[] rindexFinger = CbeffISOReader.readISOImage(localpath + "/images/" + "FingerPrintRight_Index.iso",
 				"Finger");
@@ -94,24 +87,18 @@ public class CbeffImplTest {
 		byte[] llittleFinger = CbeffISOReader.readISOImage(localpath + "/images/" + "FingerPrintLeft_Little.iso",
 				"Finger");
 		byte[] leftthumb = CbeffISOReader.readISOImage(localpath + "/images/" + "FingerPrintLeft_Thumb.iso", "Finger");
-		// byte[] irisImg1 = CbeffISOReader.readISOImage(localpath + "/images/" +
-		// "IrisImageRight.iso", "Iris");
-		// byte[] irisImg2 = CbeffISOReader.readISOImage(localpath + "/images/" +
-		// "IrisImageLeft.iso", "Iris");
-		// byte[] faceImg = CbeffISOReader.readISOImage(localpath + "/images/" +
-		// "faceImage.iso", "Face");
+
 		RegistryIDType format = new RegistryIDType();
 		format.setOrganization("257");
 		format.setType("7");
 		QualityType Qtype = new QualityType();
-		Qtype.setScore(new Long(100));
+		Qtype.setScore(Long.valueOf(100));
 		RegistryIDType algorithm = new RegistryIDType();
 		algorithm.setOrganization("HMAC");
 		algorithm.setType("SHA-256");
 		Qtype.setAlgorithm(algorithm);
 		createList = new ArrayList<>();
-		BIR rIndexFinger = new BIR.BIRBuilder().withBdb(rindexFinger)
-				.withVersion(new VersionType(1, 1))
+		BIR rIndexFinger = new BIR.BIRBuilder().withBdb(rindexFinger).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -122,8 +109,7 @@ public class CbeffImplTest {
 
 		createList.add(rIndexFinger);
 
-		BIR rMiddleFinger = new BIR.BIRBuilder().withBdb(rmiddleFinger)
-				.withVersion(new VersionType(1, 1))
+		BIR rMiddleFinger = new BIR.BIRBuilder().withBdb(rmiddleFinger).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -134,8 +120,7 @@ public class CbeffImplTest {
 
 		createList.add(rMiddleFinger);
 
-		BIR rRingFinger = new BIR.BIRBuilder().withBdb(rringFinger)
-				.withVersion(new VersionType(1, 1))
+		BIR rRingFinger = new BIR.BIRBuilder().withBdb(rringFinger).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -146,8 +131,7 @@ public class CbeffImplTest {
 
 		createList.add(rRingFinger);
 
-		BIR rLittleFinger = new BIR.BIRBuilder().withBdb(rlittleFinger)
-				.withVersion(new VersionType(1, 1))
+		BIR rLittleFinger = new BIR.BIRBuilder().withBdb(rlittleFinger).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -158,8 +142,7 @@ public class CbeffImplTest {
 
 		createList.add(rLittleFinger);
 
-		BIR lIndexFinger = new BIR.BIRBuilder().withBdb(lindexFinger)
-				.withVersion(new VersionType(1, 1))
+		BIR lIndexFinger = new BIR.BIRBuilder().withBdb(lindexFinger).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -170,8 +153,7 @@ public class CbeffImplTest {
 
 		createList.add(lIndexFinger);
 
-		BIR lMiddleFinger = new BIR.BIRBuilder().withBdb(lmiddleFinger)
-				.withVersion(new VersionType(1, 1))
+		BIR lMiddleFinger = new BIR.BIRBuilder().withBdb(lmiddleFinger).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -182,8 +164,7 @@ public class CbeffImplTest {
 
 		createList.add(lMiddleFinger);
 
-		BIR lRightFinger = new BIR.BIRBuilder().withBdb(lringFinger)
-				.withVersion(new VersionType(1, 1))
+		BIR lRightFinger = new BIR.BIRBuilder().withBdb(lringFinger).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -194,8 +175,7 @@ public class CbeffImplTest {
 
 		createList.add(lRightFinger);
 
-		BIR lLittleFinger = new BIR.BIRBuilder().withBdb(llittleFinger)
-				.withVersion(new VersionType(1, 1))
+		BIR lLittleFinger = new BIR.BIRBuilder().withBdb(llittleFinger).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -206,8 +186,7 @@ public class CbeffImplTest {
 
 		createList.add(lLittleFinger);
 
-		BIR rightThumb = new BIR.BIRBuilder().withBdb(rightthumb)
-				.withVersion(new VersionType(1, 1))
+		BIR rightThumb = new BIR.BIRBuilder().withBdb(rightthumb).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -218,8 +197,7 @@ public class CbeffImplTest {
 
 		createList.add(rightThumb);
 
-		BIR leftThumb = new BIR.BIRBuilder().withBdb(leftthumb)
-				.withVersion(new VersionType(1, 1))
+		BIR leftThumb = new BIR.BIRBuilder().withBdb(leftthumb).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -230,45 +208,8 @@ public class CbeffImplTest {
 
 		createList.add(leftThumb);
 
-//		BIR face = new BIR.BIRBuilder().withBdb(faceImg)
-//				.withVersion(new VersionType(1, 1))
-//				.withCbeffversion(new VersionType(1, 1))
-//				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
-//				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format)
-//						.withQuality(Qtype).withType(Arrays.asList(BiometricType.FACE)).withPurpose(PurposeType.ENROLL)
-//						.withLevel(ProcessedLevelType.RAW).withCreationDate(LocalDateTime.now(ZoneId.of("UTC")))
-//						.build())
-//				.build();
-//		
-//		createList.add(face);
-//
-//		BIR leftIris = new BIR.BIRBuilder().withBdb(irisImg1)
-//				.withVersion(new VersionType(1, 1))
-//				.withCbeffversion(new VersionType(1, 1))
-//				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
-//				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format)
-//						.withQuality(Qtype).withType(Arrays.asList(BiometricType.IRIS)).withSubtype(Arrays.asList("Right"))
-//						.withPurpose(PurposeType.ENROLL).withCreationDate(LocalDateTime.now(ZoneId.of("UTC")))
-//						.withLevel(ProcessedLevelType.RAW).build())
-//				.build();
-//		
-//		createList.add(leftIris);
-//
-//		BIR rightIris = new BIR.BIRBuilder().withBdb(irisImg2)
-//				.withVersion(new VersionType(1, 1))
-//				.withCbeffversion(new VersionType(1, 1))
-//				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
-//				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format)
-//						.withQuality(Qtype).withType(Arrays.asList(BiometricType.IRIS)).withSubtype(Arrays.asList("Left"))
-//						.withPurpose(PurposeType.ENROLL).withLevel(ProcessedLevelType.RAW)
-//						.withCreationDate(LocalDateTime.now(ZoneId.of("UTC"))).build())
-//				.build();
-//		
-//		createList.add(rightIris);
-
 		exceptionList = new ArrayList<>();
-		BIR validThumb = new BIR.BIRBuilder().withBdb(leftthumb)
-				.withVersion(new VersionType(1, 1))
+		BIR validThumb = new BIR.BIRBuilder().withBdb(leftthumb).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
@@ -276,17 +217,16 @@ public class CbeffImplTest {
 						.withPurpose(PurposeType.ENROLL).withLevel(ProcessedLevelType.RAW)
 						.withCreationDate(LocalDateTime.now(ZoneId.of("UTC"))).build())
 				.build();
-		Entry entry=new Entry(OtherKey.EXCEPTION, "true");
-		BIR exceptionThumb = new BIR.BIRBuilder().withBdb(new byte[0])
-				.withVersion(new VersionType(1, 1))
+
+		Entry entryInfo = new Entry(OtherKey.EXCEPTION, "true");
+		BIR exceptionThumb = new BIR.BIRBuilder().withBdb(new byte[0]).withVersion(new VersionType(1, 1))
 				.withCbeffversion(new VersionType(1, 1))
 				.withBirInfo(new BIRInfo.BIRInfoBuilder().withIntegrity(false).build())
 				.withBdbInfo(new BDBInfo.BDBInfoBuilder().withFormat(format).withQuality(Qtype)
 						.withType(Arrays.asList(BiometricType.FINGER)).withSubtype(Arrays.asList("Left Thumb"))
 						.withPurpose(PurposeType.ENROLL).withLevel(ProcessedLevelType.RAW)
 						.withCreationDate(LocalDateTime.now(ZoneId.of("UTC"))).build())
-				.withOthers(OtherKey.EXCEPTION, "true")
-				.build();
+				.withOthers(OtherKey.EXCEPTION, "true").build();
 		exceptionList.add(validThumb);
 		exceptionList.add(exceptionThumb);
 	}
@@ -296,7 +236,6 @@ public class CbeffImplTest {
 		byte[] createXml = cbeffUtilImpl.createXML(createList);
 		createXMLFile(createXml, "createCbeffLatest");
 		assertEquals(new String(createXml), new String(readCreatedXML("createCbeffLatest")));
-
 	}
 
 	@Test
@@ -306,13 +245,13 @@ public class CbeffImplTest {
 		byte[] createXml = cbeffUtilImpl.createXML(createList, readXSD("updatedcbeff"));
 		createXMLFile(createXml, "createCbeffLatest2");
 		assertEquals(new String(createXml), new String(readCreatedXML("createCbeffLatest2")));
-
 	}
 
 	@Test
 	public void testCreateExceptionXMLFromLocal() throws Exception {
 		PowerMockito.mockStatic(CbeffValidator.class);
-		cbeffUtilImpl.createXML(exceptionList, readXSD("cbeff"));
+		byte[] result = cbeffUtilImpl.createXML(exceptionList, readXSD("cbeff"));
+		assertArrayEquals(null, result);
 	}
 
 	private byte[] readCreatedXML(String name) throws IOException {
@@ -339,6 +278,7 @@ public class CbeffImplTest {
 		assertEquals(new String(updateXml), new String(readCreatedXML("updateCbeff")));
 	}
 
+	@SuppressWarnings("unused")
 	private byte[] readbytesFromStream(InputStream inputStream) throws IOException {
 		ByteArrayOutputStream byteBuffer = new ByteArrayOutputStream();
 		// this is storage overwritten on each iteration with bytes
@@ -353,6 +293,4 @@ public class CbeffImplTest {
 		return byteBuffer.toByteArray();
 
 	}
-
-
 }
